# backend/src/main/java/com/projectpandora/api/security/SecurityConfig.java
@@ -38,8 +38,6 @@ public class SecurityConfig {
                                         .permitAll()
                                         .requestMatchers(HttpMethod.POST, "/api/v1/auth/login")
                                         .permitAll()
-                                        .requestMatchers(HttpMethod.POST, "/api/v1/auth/register")
-                                        .permitAll()
                                         .anyRequest()
                                         .authenticated())
                 .httpBasic(AbstractHttpConfigurer::disable)
